name: biegunka-core
version: 0.1.0.0
synopsis: DSL definitions, interpreters, templating
license: MIT
license-file: LICENSE
author: Matvey Aksenov
maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
category: System
cabal-version: >= 1.10
build-type: Simple

library
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 filepath,
                 directory,
                 process,
                 unix,
                 containers,
                 bytestring,
                 text,
                 aeson,
                 mtl >= 2.1 && < 2.2,
                 free,
                 lens >= 3.8,
                 reflection,
                 tagged,
                 tagged-transformer >= 0.3,
                 semigroups,
                 ansi-wl-pprint,
                 terminal-size >= 0.2.0.0,
                 directory-layout >= 0.3.0.0,
                 data-default,
                 stm >= 2.4,
                 HStringTemplate >= 0.7,
                 wordexp >= 0.2
  hs-source-dirs: src
  exposed-modules: Biegunka
                   Biegunka.Primitive
                   Biegunka.Source
                   Biegunka.Source.Dummy
                   Biegunka.Source.Git
                   Biegunka.Language
                   Biegunka.DB
                   Biegunka.Execute.Exception
  other-modules: Biegunka.Control
                 Biegunka.Execute
                 Biegunka.Execute.Describe
                 Biegunka.Execute.Control
                 Biegunka.Pretend
                 Biegunka.Verify
                 Biegunka.Transform
  ghc-options: -Wall
               -fno-warn-unused-do-bind

test-suite spec
  default-language: Haskell2010
  build-depends:     base >= 4 && < 5,
                     biegunka-core,
                     directory-layout,
                     lens,
                     hspec
  hs-source-dirs:    tests
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
