name: biegunka-core
version: 0.1.0.0
synopsis: DSL definitions, interpreters, templating
license: MIT
license-file: LICENSE
author: Matvey Aksenov
maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
category: System
cabal-version: >= 1.10
build-type: Simple

data-files: data/biegunka-init.template

library
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 filepath,
                 directory,
                 process,
                 unix,
                 containers,
                 bytestring,
                 text,
                 aeson,
                 template-haskell,
                 mtl >= 2.1 && < 2.2,
                 free,
                 lens >= 3.8,
                 reflection,
                 tagged,
                 tagged-transformer >= 0.3,
                 semigroups,
                 pointed,
                 ansi-wl-pprint,
                 terminal-size >= 0.2.0.0,
                 directory-layout >= 0.3.0.0,
                 data-default,
                 stm >= 2.4,
                 HStringTemplate >= 0.7,
                 wordexp >= 0.2,
                 optparse-applicative
  hs-source-dirs: lib
  exposed-modules: Biegunka
                   Biegunka.Primitive
                   Biegunka.Script
                   Biegunka.Source
                   Biegunka.Source.Directory
                   Biegunka.Source.Layout
                   Biegunka.Source.Git
                   Biegunka.Action
                   Biegunka.Language
                   Biegunka.DB
                   Biegunka.Execute.Exception
                   Biegunka.TH
                   Biegunka.Control
                   Biegunka.Execute
                   Biegunka.Execute.Control
                   Biegunka.Execute.Describe
                   Biegunka.Execute.Schedule
                   Biegunka.Verify
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable biegunka
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 directory,
                 process,
                 text,
                 optparse-applicative,
                 wordexp
  hs-source-dirs: bin/biegunka
  main-is: Main.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind


test-suite behaviours
  default-language: Haskell2010
  build-depends:     base >= 4 && < 5,
                     biegunka-core,
                     directory-layout,
                     lens,
                     hspec
  hs-source-dirs:    tests
  main-is:           Behaviours.hs
  type:              exitcode-stdio-1.0

test-suite dsl
  default-language: Haskell2010
  build-depends:     base >= 4 && < 5,
                     biegunka-core,
                     containers,
                     lens,
                     data-default,
                     free,
                     hspec
  hs-source-dirs:    tests
  main-is:           DSL.hs
  type:              exitcode-stdio-1.0
