name: biegunka-core
version: 0.1.0.0
synopsis: DSL definitions, interpreters, templating
license: MIT
license-file: LICENSE
author: Matvey Aksenov
maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
category: System
cabal-version: >= 1.10
build-type: Simple

data-files: data/biegunka-init.template

library
  default-language: Haskell2010
  build-depends:
    aeson                >= 0.6   && < 0.7,
    ansi-wl-pprint       >= 0.6   && < 0.7,
    base                 >= 4.5   && < 5,
    bytestring           >= 0.9   && < 0.11,
    containers           >= 0.5   && < 0.6,
    data-default         >= 0.5   && < 0.6,
    directory            >= 1.1   && < 1.3,
    directory-layout     >= 0.3   && < 0.4,
    filepath             >= 1.3   && < 1.4,
    free                 >= 3.4   && < 3.5,
    HStringTemplate      >= 0.7   && < 0.8,
    lens                 >= 3.8   && < 4,
    mtl                  >= 2.1   && < 2.2,
    optparse-applicative >= 0.5   && < 0.6,
    pointed              >= 3     && < 4,
    process              >= 1.1   && < 1.2,
    reflection           >= 1.1.6 && < 2,
    semigroups           >= 0.8.4 && < 1,
    stm                  >= 2.4   && < 3,
    tagged               >= 0.4.4 && < 1,
    tagged-transformer   >= 0.3   && < 1,
    template-haskell     >= 2.7   && < 2.9,
    terminal-size        >= 0.2   && < 0.3,
    text                 >= 0.11  && < 0.12,
    unix                 >= 2.5   && < 2.7,
    wordexp              >= 0.2   && < 0.3
  hs-source-dirs: lib
  exposed-modules:
    Biegunka
    Biegunka.Primitive
    Biegunka.Script
    Biegunka.Source
    Biegunka.Source.Directory
    Biegunka.Source.Layout
    Biegunka.Source.Git
    Biegunka.Action
    Biegunka.Language
    Biegunka.DB
    Biegunka.Execute.Exception
    Biegunka.TH
    Biegunka.Control
    Biegunka.Execute
    Biegunka.Execute.Control
    Biegunka.Execute.Describe
    Biegunka.Execute.Schedule
    Biegunka.Verify
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind

executable biegunka
  default-language: Haskell2010
  build-depends:
    base >= 3 && < 5,
    directory,
    process,
    text,
    optparse-applicative,
    wordexp
  hs-source-dirs: bin/biegunka
  main-is: Main.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind


test-suite behaviours
  default-language: Haskell2010
  build-depends:
    base >= 4 && < 5,
    biegunka-core,
    directory-layout,
    lens,
    hspec
  hs-source-dirs: tests
  main-is: Behaviours.hs
  type: exitcode-stdio-1.0

test-suite dsl
  default-language: Haskell2010
  build-depends:
    base >= 4 && < 5,
    biegunka-core,
    containers,
    lens,
    data-default,
    free,
    hspec
  hs-source-dirs: tests
  main-is: DSL.hs
  type: exitcode-stdio-1.0
