name:                biegunka
version:             0.2
synopsis:            Configuration development
description:
  Configuration development tools - http://biegunka.budueba.com/
homepage:            http://biegunka.budueba.com/
license:             MIT
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          Matvey Aksenov <matvey.aksenov@gmail.com>
category:            System
cabal-version:       >= 1.10
build-type:          Custom
data-files:
  data/biegunka-init.template
extra-source-files:
  README.markdown

source-repository head
  type: git
  location: https://github.com/biegunka/biegunka

library
  default-language: Haskell2010
  build-depends:
      async                >= 2      && < 3
    , acid-state           >= 0.12.1 && < 0.13
    , aeson                >= 0.7    && < 0.10
    , base                 >= 4.6    && < 5
    , bytestring
    , command-qq           >= 0.1    && < 1
    , containers
    , data-default-class   >= 0      && < 1
    , directory
    , directory-layout     >= 0.7    && < 0.8
    , exceptions           >= 0.2    && < 1
    , filepath
    , free                 >= 4.1    && < 5
    , HStringTemplate      >= 0.7    && < 0.9
    , hspec                >= 1.12   && < 2.2
    , lens                 >= 4.4    && < 5
    , meep                 >= 0.1    && < 1
    , mtl                  >= 2.1    && < 2.3
    , optparse-applicative >= 0.11   && < 0.12
    , pointed              >= 3      && < 5
    , process
    , semigroups           >= 0.8.4  && < 1
    , safecopy             >= 0.8    && < 0.9
    , stm                  >= 2.4    && < 3
    , template-haskell
    , text                 >= 0.11   && < 1.3
    , transformers
    , unix
    , void                 >= 0.6    && < 1
  hs-source-dirs: src
  exposed-modules:
    Control.Biegunka
    Control.Biegunka.Action
    Control.Biegunka.Biegunka
    Control.Biegunka.Check
    Control.Biegunka.Execute
    Control.Biegunka.Execute.Describe
    Control.Biegunka.Execute.Exception
    Control.Biegunka.Execute.Settings
    Control.Biegunka.Execute.Watcher
    Control.Biegunka.Language
    Control.Biegunka.Logger
    Control.Biegunka.Namespace
    Control.Biegunka.Options
    Control.Biegunka.Primitive
    Control.Biegunka.QQ
    Control.Biegunka.Script
    Control.Biegunka.Script.Token
    Control.Biegunka.Settings
    Control.Biegunka.Source
    Control.Biegunka.Source.Directory
    Control.Biegunka.Source.Git
    Control.Biegunka.Source.Layout
    Control.Biegunka.Templates
    Control.Biegunka.Templates.HStringTemplate
    Git_biegunka
    Paths_biegunka
  ghc-options:
    -Wall
    -Werror
    -fno-warn-unused-do-bind

executable biegunka
  default-language:
    Haskell2010
  build-depends:
      aeson
    , base                 >= 3 && < 5
    , biegunka             >= 0.2
    , bytestring
    , containers
    , data-default-class
    , directory
    , filepath
    , lens
    , optparse-applicative
    , process
    , text
    , transformers
  hs-source-dirs:
    bin
  main-is:
    Main.hs
  other-modules:
    Generate
    List
    Options
    Run
  ghc-options:
    -threaded
    -Wall
    -Werror
    -fno-warn-unused-do-bind

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  build-depends:
      base                    >= 4 && < 5
    , biegunka
    , containers
    , data-default-class
    , directory
    , directory-layout        >= 0.6.1
    , filepath
    , free
    , hspec
    , hspec-expectations-lens
    , lens
    , optparse-applicative
    , semigroups
    , temporary
    , text
    , transformers
    , unix
  hs-source-dirs:
    bin
    test
  main-is:
    Spec.hs
  other-modules:
    Control.Biegunka.BiegunkaSpec
    Control.Biegunka.OptionsSpec
    BehavioursSpec
    DSLSpec
    GenerateSpec
    Git_biegunka
    Paths_biegunka
  ghc-options:
    -Wall
    -Werror
    -fno-warn-unused-do-bind
  cpp-options:
    -DTEST
