name:                biegunka
version:             0.2
synopsis:            Configuration development
description:
  Configuration development tools - http://biegunka.budueba.com/
homepage:            http://biegunka.budueba.com/
license:             MIT
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          Matvey Aksenov <matvey.aksenov@gmail.com>
category:            System
cabal-version:       >= 1.10
build-type:          Custom
data-files:
  data/Biegunka.hs
extra-source-files:
  README.markdown
  test/typecheck/should_compile/*.hs
  test/typecheck/should_fail/*.hs

source-repository head
  type: git
  location: https://github.com/biegunka/biegunka

library
  default-language: Haskell2010
  build-depends:
      async                >= 2      && < 3
    , acid-state           >= 0.12.1 && < 0.14
    , base                 >= 4.6    && < 5
    , bytestring
    , command-qq           >= 0.1    && < 1
    , conduit              >= 1.2    && < 1.3
    , conduit-extra        >= 1.1    && < 1.2
    , containers
    , cryptohash           >= 0.11   && < 0.12
    , directory
    , directory-layout     >= 0.7    && < 0.8
    , exceptions           >= 0.2    && < 1
    , filepath
    , free                 >= 4.1    && < 5
    , HStringTemplate      >= 0.7    && < 0.9
    , hspec                >= 1.12   && < 2.2
    , lens                 >= 4.4    && < 5
    , meep                 >= 0.1    && < 1
    , mtl                  >= 2.1    && < 2.3
    , optparse-applicative >= 0.11   && < 0.12
    , process
    , resourcet            >= 1.1    && < 1.2
    , semigroups           >= 0.8.4  && < 1
    , safecopy             >= 0.8    && < 0.9
    , stm                  >= 2.4    && < 3
    , template-haskell
    , temporary            >= 1.2    && < 1.3
    , text                 >= 0.11   && < 1.3
    , transformers
    , unix
  hs-source-dirs: src
  exposed-modules:
    Control.Biegunka
    Control.Biegunka.Biegunka
    Control.Biegunka.Check
    Control.Biegunka.Execute
    Control.Biegunka.Execute.Describe
    Control.Biegunka.Execute.IO
    Control.Biegunka.Execute.Exception
    Control.Biegunka.Execute.Settings
    Control.Biegunka.Execute.Watcher
    Control.Biegunka.Interpreter
    Control.Biegunka.Language
    Control.Biegunka.Logger
    Control.Biegunka.Namespace
    Control.Biegunka.Options
    Control.Biegunka.Patience
    Control.Biegunka.Primitive
    Control.Biegunka.QQ
    Control.Biegunka.Script
    Control.Biegunka.Settings
    Control.Biegunka.Source
    Control.Biegunka.Source.Directory
    Control.Biegunka.Source.Git
    Control.Biegunka.Source.Git.Internal
    Control.Biegunka.Source.Layout
    Control.Biegunka.Templates
    Control.Biegunka.Templates.HStringTemplate
    Git_biegunka
    Paths_biegunka
  ghc-options:
    -Wall
    -Werror
    -fno-warn-unused-do-bind

executable biegunka
  default-language:
    Haskell2010
  build-depends:
      aeson                >= 0.7    && < 0.10
    , base                 >= 3 && < 5
    , biegunka             >= 0.2
    , bytestring
    , conduit
    , conduit-extra
    , containers
    , data-default-class
    , directory
    , filepath
    , lens
    , process
    , resourcet
    , text
    , transformers
    , unix
  hs-source-dirs:
    bin
  main-is:
    Main.hs
  other-modules:
    App
    Init
    Json
    Options
    Run
  ghc-options:
    -threaded
    -Wall
    -Werror

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  build-depends:
      base                    >= 4 && < 5
    , biegunka
    , conduit
    , conduit-extra
    , containers
    , data-default-class
    , directory
    , directory-layout        >= 0.6.1
    , filepath
    , free
    , hspec
    , hspec-expectations-lens
    , lens
    , optparse-applicative
    , process
    , resourcet
    , semigroups
    , temporary
    , text
    , transformers
    , unix
  hs-source-dirs:
    bin
    test/spec
  main-is:
    Spec.hs
  other-modules:
    Control.Biegunka.BiegunkaSpec
    Control.Biegunka.OptionsSpec
    Control.Biegunka.Source.GitSpec
    BehavioursSpec
    DSLSpec
    InitSpec
    OptionsSpec
    RunSpec
    SpecHelper
  ghc-options:
    -Wall
    -Werror
    -fno-warn-unused-do-bind
  cpp-options:
    -DTEST
