name:                aeson-encode-pretty
version:             0.1.0.0
synopsis:            Pretty JSON encoding.
description:         Configurable encoding for human-readable JSON output.
license:             MIT
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          maktvey.aksenov@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >= 1.8


library
  build-depends:       base >= 3 && < 5,
                       text,
                       aeson,
                       bytestring,
                       vector,
                       unordered-containers,
                       mtl
  exposed-modules: Data.Aeson.Encode.Pretty
  hs-source-dirs: src
  ghc-options: -Wall
               -fno-warn-unused-do-bind

